# not-pandas

./: README.md  docs.sh  pyproject.toml
not_pandas/: __init__.py  errors.py  utils.py
not_pandas/tests/: datasets.py  manual.py
