[tool.poetry]
name = "not-pandas"
version = "0.1.0"
description = "A minimal pandas-style DataFrame"
authors = ["Fred Birchall <frederick.birchall@gmail.com>"]
readme = "README.md"
packages=[{include = "not_pandas"}]
exclude = ["not_pandas/tests"]


[tool.poetry.dependencies]
python = "^3.11"
tabulate = "0.9.0"
pdoc = "^15.0.1"


[tool.poetry.group.test.dependencies]
pytest = "8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"